# dbt-elementary-test-lab

./: .env.example  README.md  docker-compose.yaml  pyproject.toml
dbt_pipeline/: dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
dbt_pipeline/edr_target/: elementary_output.json  elementary_report.html
dbt_pipeline/elementary/: .user_id  elementary_output.json  elementary_report.html
dbt_pipeline/models/base/: schema.yml
dbt_pipeline/models/base/customers/: vw_customers.sql
dbt_pipeline/models/bronze/: schema.yml
dbt_pipeline/models/bronze/customers/: customers.sql
dbt_pipeline/models/gold/customers/: dim_customers.sql  tax_ids.sql
dbt_pipeline/models/silver/customers/: stg_customers.sql
scripts/: source-env
