[tool.poetry]
name = "dbt_spark_test"
version = "0.1.0"
description = ""
authors = [
    "Emiliano Frigo",
]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
dbt-core = "1.8.3"
dbt-postgres = "^1.7.3"
elementary-data = ">=0.16.1"
setuptools = "^75.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"